--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,8 @@
     --clr-s: #1B1B1E;
 }
 
+* {padding: 0; margin: 0; box-sizing: border-box;}
+
 /* .inter-<uniquifier> {
     font-family: "Inter", serif;
     font-optical-sizing: auto;
@@ -21,3 +23,88 @@
     font-style: normal;
 } */
 
+/* header */
+header {
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 5px 10px;
+    background-color: var(--clr-s);
+}
+
+header .logo {display: flex; align-items: center; gap: 10px;}
+header .logo > .img {width: 50px; height: 50px;} 
+header .logo > .img > img {width: 100%; height: 100%;}
+header .logo > h1 {
+    font-family: var(--font-staatliches);
+    font-size: 36px;
+    color: var(--clr-e);
+}
+
+header .hamburger .line {
+    width: 30px;
+    height: 3px;
+    background-color: var(--clr-e);
+    margin: 5px;
+}
+
+header nav {
+    position: absolute;
+    left: 0;
+    top: 60px;
+    background-color: var(--clr-s);
+    width: 100%;
+}
+header nav li {
+    list-style: none;
+    padding: 10px;
+    text-align: center;
+}
+
+/* banner */
+section.banner {
+    height: calc(100vh - 70px);
+    background-color: var(--clr-a);
+    position: relative;
+}
+section.banner > .img {
+    position: absolute;
+    right: 0;
+    top: 0;
+    height: 100%;
+    overflow: hidden;
+}
+section.banner > .img > img {width: 110%; height: 110%; object-fit: cover;}
+section.banner > .info {
+    position: absolute;
+    left: 20%;
+    top: 50%;
+    transform: translate(-20%, -50%);
+    width: 600px;
+    display: inline-flex;
+    flex-direction: column;
+    gap: 30px;
+    z-index: 1;
+}
+section.banner > .info > .info-title > h2 {font-size: 72px; font-family: var(--font-staatliches);}
+section.banner > .info > .info-title > h2:first-child {color: var(--clr-e);}
+section.banner > .info > .info-title > h2:last-child {color: var(--clr-r);}
+section.banner > .info > .info-span {position: relative; height: 110px;}
+section.banner > .info > .info-span > span {
+    background-color: var(--clr-d);
+    font-family: var(--font-bebas-neue);
+    font-size: 34px;
+    color: var(--clr-a);
+    padding: 0 15px;
+    display: inline-block;
+    letter-spacing: 5px;
+}
+section.banner > .info > .info-span > span:first-child {transform: rotate(-2deg); position: absolute; left: 0;}
+section.banner > .info > .info-span > span:last-child {transform: rotate(2deg); position: absolute; right: 0; top: 50px;}
+section.banner > .info > p {
+    color: var(--clr-e);
+    font-family: var(--font-be-vietnam-pro);
+    font-size: 22px;
+    text-align: center;
+}
