--- a/css/style.css
+++ b/css/style.css
@@ -87,7 +87,13 @@ section.banner > .info {
     gap: 30px;
     z-index: 1;
 }
-section.banner > .info > .info-title > h2 {font-size: 72px; font-family: var(--font-staatliches);}
+section.banner > .info > .info-title > h2 {
+    font-size: 72px;
+    font-family: var(--font-staatliches);
+    letter-spacing: 4px;
+    font-weight: 400;
+    text-shadow: 5px 5px 0 var(--clr-s);
+}
 section.banner > .info > .info-title > h2:first-child {color: var(--clr-e);}
 section.banner > .info > .info-title > h2:last-child {color: var(--clr-r);}
 section.banner > .info > .info-span {position: relative; height: 110px;}
@@ -101,10 +107,11 @@ section.banner > .info > .info-span > span {
     letter-spacing: 5px;
 }
 section.banner > .info > .info-span > span:first-child {transform: rotate(-2deg); position: absolute; left: 0;}
-section.banner > .info > .info-span > span:last-child {transform: rotate(2deg); position: absolute; right: 0; top: 50px;}
+section.banner > .info > .info-span > span:last-child {transform: rotate(2deg); position: absolute; right: 0; top: 80px;}
 section.banner > .info > p {
     color: var(--clr-e);
     font-family: var(--font-be-vietnam-pro);
     font-size: 22px;
     text-align: center;
+    margin-top: 10px;
 }
