--- a/css/style.css
+++ b/css/style.css
@@ -115,3 +115,59 @@ section.banner > .info > p {
     text-align: center;
     margin-top: 10px;
 }
+
+/* services */
+.services {
+    position: relative;
+    padding: 80px 0;
+}
+.services > .wave {
+    width: 100%;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    z-index: 1;
+}
+.services > .wave > img {width: 100%;}
+.services h2 {
+    background: linear-gradient(to right, var(--clr-e) 10%, var(--clr-a) 15%, var(--clr-a) 85%, var(--clr-e) 90%);
+    text-align: center;
+    color: var(--clr-e);
+    font-family: var(--font-staatliches);
+    font-size: 58px;
+    position: relative;
+    z-index: 2;
+}
+.services > p {
+    font-family: var(--font-be-vietnam-pro);
+    font-size: 22px;
+    text-align: center;
+    margin: 0 auto;
+    max-width: 800px;
+    position: relative;
+    z-index: 2;
+}
+.services > .services-cards {
+    max-width: 1040px;
+    display: flex;
+    gap: 30px;
+    margin: 0 auto;
+    position: relative;
+    z-index: 2;
+}
+.services > .services-cards > .card {
+    background-color: var(--clr-a);
+    border-radius: 10px;
+    box-shadow: 10px 10px 10px var(--clr-s);
+}
+.services > .services-cards > .card h3,
+.services > .services-cards > .card p {
+    font-family: var(--font-be-vietnam-pro);
+    font-size: 19px;
+    color: var(--clr-e);
+    padding: 20px;
+    text-align: center;
+}
+.services > .services-cards > .card p i {color: var(--clr-r); font-style: normal;}
+.services > .services-cards > .card h3 {font-size: 22px; height: 96px;}
+.services > .services-cards > .card .img img {width: 100%; height: 100%; object-fit: cover;}
